[package]
name = "pycoverm"
version = "0.6.3"
edition = "2021"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/apcamargo/pycoverm"
keywords = ["bioinformatics"]

[lib]
name = "pycoverm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.5"
coverm = { git = "https://github.com/wwood/CoverM", rev = "b75eb6c90b00af4e8fdd6c691efdcc299e8c887c" }
ndarray = "0.17.2"
numpy = "0.22.0"
rust-htslib = { version = "0.45.0", default-features = false }
